# kEngram

./: .env.example  .gitignore  AGENTS.md  AGENTS.md.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml  start_stack.sh  start_worker.sh  stop_stack.sh
.cargo/: config.toml
.github/: CODEOWNERS
.sqlx/: query-0ad245e5d8d401fb4598d3b20faa706e11545a8aad96b60795ecad559e221478.json  query-0afbe96533842c966aa96bb7a56f3962185dcf2b44d4b9d16eac26b2933f6915.json  query-0cc163b69dbee7b85e520cb5dcb626131791c6fe2406d854cc0f7dea91c82871.json  query-13a597c31dc12e06b269e26ea69fba3c0a9b07b62b9b1d2a439df8367ee887a7.json  query-169d6cb566d7c8cbf13f5c3703a7e7623ad469fddf10af421b48fe9af7a7a724.json  query-1820df465b7580228980aa495c43833e49de88aa096cae303efd164041738932.json  query-1e42fb7ad226adbc18dea034760b9ae807737a066b48594fc2fe782fb77f690a.json  query-2634cafdd4b8489f0d7de6472ca3dafaebe8b0101940033d620a45a89457d175.json  query-29473698ed038060d7f1a2f4a592140133c0efd01da9e55f42a478418507088b.json  query-34c4940e34f85f91a0a92bc8f2dfbdf94796e1c506ce2b377eb5aeafb29d92ea.json  query-3e458085d6cc9c752473119f34cd1696dfe6aed8fa13ac26a944a97cd32e2875.json  query-3fa1056e42661a25f23849a178969db1cd6138b38ed0fc348e2273e3d32123b0.json  (+43 more)
TODO/: embed_backfill_force.md  graph_walking_issues.md  (+1 more)
crates/engram-mcp/: Cargo.toml
crates/engram-mcp/src/: backfill.rs  capture.rs  correct.rs  drain.rs  lib.rs  link.rs  reflect.rs  retract.rs  search.rs  server.rs
crates/engram-mcp/tests/: tag_filter_live_corpus_probe.rs
crates/kengram-storage/: Cargo.toml
crates/kengram-storage/src/: lib.rs
crates/kengram-web/: Cargo.toml
crates/kengram-web/src/: api.rs  assets.rs  error.rs  host_guard.rs  lib.rs  pages.rs
crates/kengram-web/static/: app.css  app.js
crates/kengram-web/templates/: base.html  graph.html  scope.html  scopes.html  search.html  stats.html  thought.html
(+109 files in other folders)
