[package]
name = "engram-mcp"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
engram-core.workspace = true
engram-storage.workspace = true
engram-embed.workspace = true

async-trait.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
