[package]
name = "kengram-storage"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kengram-core.workspace = true

pgvector.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
