[package]
name = "kengram-web"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
license.workspace = true

# M8 — read-only human web surface. A library crate mounted by kengram-cli's
# `serve` command; reuses the kengram-mcp read orchestrators behind read-only
# `/api/*` routes + server-rendered HTML. No binary target; kengram-cli stays
# the only binary in the workspace.

[dependencies]
kengram-core.workspace = true
kengram-mcp.workspace = true
kengram-embed.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
sqlx.workspace = true

[dev-dependencies]
kengram-storage.workspace = true
tower = "0.5"
